fix: search suggestion height overflow

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -6,7 +6,9 @@
 	z-index: 101;
 	top: 100%;
 	display: none;
+	overflow: auto;
 	width: 100%;
+	max-height: ~'calc( 100vh - var( --height-header ) )';
 	box-sizing: border-box;
 	border: 1px solid var( --border-color-base--lighter );
 	margin: 0;
